Decode entire in-memory file for WebAudio

DecodeAudioFileData assumed that any in-memory file to be decoded had
a known duration that could be estimated without reading the entire
file.  For webm files produced by MediaRecorder, this can be false.

Read and decode the entire file, ignoring any estimated duration.  This
will result in increased memory consumption because the final output
is built up in pieces before finally copying it to the final destination.

Add tests for decoding webm files and WAV files using float32 samples.
Vorbis tests need to be updated because the resulting outputs were
previously truncated.

BUG=673782
TEST=codec-tests/webm/webm-decode.html, codec-tests/wav/f32-44khz.html

Review-Url: https://codereview.chromium.org/2655783004
Cr-Commit-Position: refs/heads/master@{#449662}

Former-commit-id: 3489b2812bf4e670cc27627ee9a7a1fd1919f399